--- a/.github/workflows/build_deploy.yaml
+++ b/.github/workflows/build_deploy.yaml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+  pull_request:
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -11,17 +13,26 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Docker
-        uses: docker/setup-buildx-action@v3
+      - name: Install dependencies
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y g++ libgtest-dev cmake
 
-      - name: Build Docker image
-        run: docker build -t cpp-project .
+      - name: Create Build Directory
+        run: mkdir build
+
+      - name: Configure CMake
+        run: cd build && cmake ..
+
+      - name: Build
+        run: cd build && make # This is the crucial step!
 
       - name: Run tests
-        run: docker run --rm cpp-project ./tests
+        run: ./build/test_project # Use the correct executable name (test_project)
 
   build:
     runs-on: ubuntu-latest
+    needs: [test]
     env:
       AWS_REGION: ${{ secrets.AWS_REGION }}
       sha_short: $(git rev-parse --short HEAD)
